Made the lumora website

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@ I’m Lumora, a passionate health coach and certified nutrition<br>
  journey into health coaching began with a personal quest for<br> well-being, which ignited a deep desire to help others find their<br> path to health.</p>
     </div>
     <div class="support">
-        <img src="">
+        <img src="images/girl-bending.jpg">
         <h1>Supporting you in <br>achieving and<br> maintaining a healthy,<br> balanced life.</h1><br><br>
         <p>I believe that one size does NOT fit all. I take a holistic approach <br>
             to nutrition using evidence-based integrative and functional<br>
@@ -76,7 +76,7 @@ I’m Lumora, a passionate health coach and certified nutrition<br>
                  <br><br>
                  <button>Book An Appointment</button>
         </div>
-        <img src="">
+        <img src="images/peoplerunning.jpg">
     </div>
     <div class="footer">
     <h1>Lumora</h1>
