--- a/services.html
+++ b/services.html
@@ -34,11 +34,11 @@ Expert advice on making healthy food choices.
 Flexible plans that evolve with your progress</p>
 <br><br>
 <button>Book An Appointment</button>
-<img src="">
+<img src="images/avocado.webp">
     </div>
     <br><br>
     <div class="weight-management">
-        <img src="">
+        <img src="images/healthy-weight.webp">
         <h1>Weight management<br>counseling</h1>
         <h3>Start from: $1,500</h3>
         <br><br>
@@ -69,10 +69,10 @@ Practical tips for incorporating healthy habits.
 Regular check-ins to track progress and adjust plans.</p>
 <br><br>
 <button>Book An Appointment</button>
-<img src="">
+<img src="images/massage.jpeg">
     </div>
     <div class="spiritual-knowledge">
-        <img src="">
+        <img src="images/girl-bending.jpg">
         <h1>Expand your spiritual<br>knowledge</h1>
         <h3>Start from: $1,800</h3>
         <br><br>
